@@ -32,22 +32,9 @@ namespace transformations {
 void SqlHexDecode::execute(const Transaction *t,
     const ModSecString &in,
     ModSecString &out) noexcept {
-    unsigned char *input;
-    int size = 0;
-
-    input = reinterpret_cast<unsigned char *>
-        (malloc(sizeof(char) * in.length()+1));
-
-    if (input == NULL) {
-        return;
-    }
-
-    memcpy(input, in.c_str(), in.length()+1);
-
-    size = inplace(input, in.length());
-
-    out.assign(reinterpret_cast<char *>(input), size);
-    free(input);
+    out.assign(in);
+    auto size = inplace(reinterpret_cast<unsigned char*>(&out[0]), out.size());
+    out.resize(size);
 }
 
 
